Swagger-ui and some validation tweaks
